Error de ortografía

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class="fst-italic lh-1 mb-4">Nuestra página estar disponible pronto</h1>
-                    <p class="mb-5">En Enlace Inmobiliario estamos trabajando para poner todo en marcha. Pronto te mostraremos lo que hacemos.</p>
+                    <h1 class="fst-italic lh-1 mb-4">Nuestra página estará disponible pronto</h1>
+                    <p class="mb-5">En Enlace Inmobiliario estamos trabajando para poner todo en marcha. <br/> Pronto te mostraremos lo que hacemos.</p>
                     <img src="/assets/img/logo.png" width="200"/>
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
